--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
-  font-family: 'Saira Extra Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
